[gd_scene load_steps=5 format=3 uid="uid://binldjwnoxwjq"]

[ext_resource type="Script" uid="uid://dqttewalk2ltr" path="res://Script/ClassScript/MapNodeStar.gd" id="1_jlhjl"]
[ext_resource type="PackedScene" uid="uid://bokt0b574qaxk" path="res://MapNode/map_node_halo_drawing_center.tscn" id="2_mnfgt"]
[ext_resource type="Script" uid="uid://xaieehsc3tms" path="res://MapNode/map_node_halo_drawing_center.gd" id="3_pgljj"]
[ext_resource type="Texture2D" uid="uid://c4h03s10yicqg" path="res://Textures/StarTexture/Planets/planet01.png" id="3_y1hkh"]

[node name="MapNodeStar" type="Node2D"]
script = ExtResource("1_jlhjl")
halo_drawing_center = ExtResource("2_mnfgt")
metadata/_custom_type_script = "uid://dqttewalk2ltr"

[node name="MapNodeStarSprite" type="Sprite2D" parent="."]
texture = ExtResource("3_y1hkh")

[node name="HaloDrawingCenter" parent="." instance=ExtResource("2_mnfgt")]
script = ExtResource("3_pgljj")

[node name="StarUI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="StarFleetsLabel" type="Control" parent="StarUI"]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
